--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,10 @@
     "compilerOptions": {
         "jsx": "react", // 支持jsx语法
         "module": "es6",
-        "allowSyntheticDefaultImports": true // 支持默认导入模块
+        "allowSyntheticDefaultImports": true, // 支持默认导入模块
+        "moduleResolution": "Node"
     },
     "exclude": [
         "./node_modules"
-    ]
+    ],
 }
